--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-ui-image": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
